# lama_laser

lama_interfaces/: CMakeLists.txt
lj_laser/: CHANGELOG.rst  CMakeLists.txt  package.xml
lj_laser/include/lj_laser/: crossing_detector.h  jockey.h  lj_laser.h
lj_laser/src/: crossing_detector.cpp  jockey.cpp  lj_laser.cpp  lj_laser_node.cpp
lj_laser_heading/: CHANGELOG.rst  CMakeLists.txt  package.xml
lj_laser_heading/include/lj_laser_heading/: jockey.h
lj_laser_heading/src/: jockey.cpp  lj_laser_heading_node.cpp
nj_laser/: CHANGELOG.rst  CMakeLists.txt  package.xml
nj_laser/include/: CHist.h  CLaloc.h  Voronoi.h  crossDetect.h  laloc_utils.h  polygonUtils.h  shapeSim.h
nj_laser/include/nj_laser/: claloc.h  cross_detect.h  crossing_detector.h  crossing_detector_helper.h  hist.h  jockey.h  laloc_utils.h  nj_laser.h  polygon_utils.h  shape_sim.h  visualization.h  voronoi.h
nj_laser/src/: CLaloc.cc  claloc.cpp  crossDetect.cc  cross_detect.cpp  crossing_detector.cpp  crossing_detector_helper.cpp  jockey.cpp  laloc_utils.cc  laloc_utils.cpp  main.cc  nj_laser.cpp  nj_laser_node.cpp  shapeSim.cc  shape_sim.cpp  visualization.cpp  voronoi.cpp
nj_laser/support/ann/: Make-config  Makefile
nj_laser/support/ann/src/: kd_dump.cpp
nj_oa_laser/: CHANGELOG.rst  CMakeLists.txt  package.xml
nj_oa_laser/include/nj_oa_laser/: jockey.h  twist_handler.h
nj_oa_laser/src/: jockey.cpp  nj_oa_laser_node.cpp  twist_handler.cpp
nlj_laser/: CHANGELOG.rst  CMakeLists.txt  package.xml
nlj_laser/include/nlj_laser/: hist.h  lj_laser.h  nj_laser.h
nlj_laser/launch/: learning_navigating_laser.launch
nlj_laser/msg/: Histogram.msg  LaserDescriptor.msg
nlj_laser/src/: hist.cc  lj_laser.cpp  main.cc  nj_laser.cpp  nlj_laser_node.cpp
nlj_laser/srv/: GetLaserDescriptor.srv  SetLaserDescriptor.srv
nlj_laser/test/: nlj_laser_interfaces.test  test_nlj_laser_interfaces.py
